# lddtest

./: README.md  pyproject.toml
lddtest/: __init__.py  dcdensity.py  enums.py  lddtest.py  utils.py
scripts/: benchmark.py  chatgpt.py  clustered_sample.py  example.py
tests/: __init__.py  test_against_r.py  test_against_stata.py
tests/stata/: DCdensity_example.do  README.md
