[project]
name = "lddtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "statsmodels>=0.14.4",
]

[dependency-groups]
dev = [
    "jupyter-console>=6.6.3",
    "plotly>=6.0.0",
    "pytest>=8.3.4",
    "rpy2[all]>=3.5.17",
    "stata-setup>=0.1.3",
]
